--- a/portfolio-template-master/index.html
+++ b/portfolio-template-master/index.html
@@ -43,8 +43,8 @@
           <span>Ivanov Nikita</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>As an indie game developer, Russia</p>
-        <a href="#contact" class="usualnik@gmail.com">Get in touch</a>
+        <p>An indie game developer, Russia</p>
+        <a href="#contact" class="getIntouch">Get in touch</a>
       </div>
     </div>
   </header>
@@ -155,35 +155,22 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Expert in Video Game Storytelling, C# coding, UX/UI Design, GitHub, Blender, Unity Packages, Sound Design, and Animation.
-
             Hello, I'm a Unity 3D developer with a passion for creating immersive and engaging interactive experiences. If you're looking for a versatile professional who can bring your game or project to life, I'm here to help.
-
-            Why Hire Me?
-
-              • Proven Expertise: I have a successful track record of delivering various Unity projects, ranging from mobile games to cross-platform games and simulations.
-              • Creative Vision: I bring a creative touch to every project, ensuring it stands out in a competitive market.
-              • Collaborative Approach: I'm an excellent communicator and collaborator, making me a valuable asset to any project team.
-              • Punctual Delivery: Meeting deadlines and delivering high-quality results on time is my commitment.
-              • Problem-Solving Skills: I excel at troubleshooting and finding innovative solutions to technical challenges, ensuring smooth project progress.
-              • If you're seeking a Unity 3D developer with skills in animations, UX/UI design, GitHub collaboration, Blender integration, programming skills, sound design, and video game storytelling, look no further. Let's discuss your project requirements and bring your vision to life with my expertise. 
-              
-              Contact me today to get started!
             </p>
             <!-- Provide a link to your resume -->
             <a href="#" class="btn">My Resume</a>
           </div>
-<!-- 
-          <div class="about__photo-container"> -->
+
+          <div class="about__photo-container"> 
             <!-- Add a nice photo of yourself -->
-            <!-- <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+             <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
           </div>
         </div>
       </div>
     </section>
-  </main> -->
+  </main>
 
-  <!-- ***** Contact ***** -->
+   <!-- ***** Contact *****  -->
 
   <section class="contact" id="contact">
     <div class="row">
@@ -198,7 +185,7 @@
           me is via an email.
         </p>
         <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
+        <a href="mailto:you@example.com" class="btn">usualnik@gmail.com</a>
       </div>
     </div>
   </section>
