--- a/portfolio-template-master/index.html
+++ b/portfolio-template-master/index.html
@@ -162,7 +162,7 @@
 
           <div class="about__photo-container"> 
             <!-- Add a nice photo of yourself -->
-             <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+             <img class="about__photo" src="./images/setup.png" alt="" />
           </div>
         </div>
       </div>
