--- a/portfolio-template-master/index.html
+++ b/portfolio-template-master/index.html
@@ -61,24 +61,50 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
+              <h3>GitHub Portfolio</h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
+                  UNITY Projects
               </p>
               <ul class="work__list">
-                <li>HTML</li>
-                <li>SCSS</li>
-                <li>JavaScript</li>
-                <li>Parcel</li>
+                  <li>Unity</li>
+                  <li>UI Tollkit</li>
+                  <li>Splines</li>
+                  <li>Dotween</li>
+                  <li>And many more features</li>
+
               </ul>
 
-              <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
-                  <img src="./images/github.svg" class="work__code" alt="GitHub">
-                </a>
+              <div class="work__links">          
+                  <a href="https://github.com/usualnik/Portfolio.git" class="link__text">
+                      GitHub <span>&rarr;</span>
+                  </a>                
+              </div>
+            </div>
+            <div class="work__image-box">
+              <img src="./images/Portfolio.gif" class="work__image" alt="Project 1" width="600" height="340">
+
+              
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Thorns: Police never sleeps</h3>
+              <p>
+                  Visual novel.
+              </p>
+              <ul class="work__list">
+                  <li>Ren'Py</li>
+                  <li>Python</li>
+                  <li>More than 1M views</li>
+                  <li>100+ sales in first month</li>
+
+              </ul>
+
+              <div class="work__links">          
+                  <a href="https://store.steampowered.com/app/2908340/Thorns_Police_never_sleeps/" class="link__text">
+                      STEAM <span>&rarr;</span>
+                  </a>                
               </div>
             </div>
             <div class="work__image-box">
@@ -88,59 +114,28 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>Thorns: Adlia</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                  Visual novel.
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                  <li>Original Sound Track</li>
+                  <li>Animated arts</li>
+                  <li>Improved SFX</li>
+                  <li>Improved storyline</li>
+                  <li>STEAM UPCOMING: Q4 2024</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
-                </a>
+                  <a href="https://store.steampowered.com/app/2919590/Thorns_Adlia/" class="link__text">
+                      STEAM <span>&rarr;</span>
+                  </a>                
               </div>
             </div>
             <div class="work__image-box">
               <img src="./images/project-2.png" class="work__image" alt="Project 1" />
             </div>
-          </div>
-
-          <div class="work__box">
-            <div class="work__text">
-              <h3>Notificator</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
-              </p>
-              <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
-              </ul>
-
-              <div class="work__links">
-                <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
-                </a>
-              </div>
-            </div>
-            <div class="work__image-box">
-              <img src="./images/project-3.png" class="work__image" alt="Project 3" />
-            </div>
-          </div>
+          </div>          
         </div>
       </div>
     </section>
@@ -157,7 +152,7 @@
             Hello, I'm a Unity 3D developer with a passion for creating immersive and engaging interactive experiences. If you're looking for a versatile professional who can bring your game or project to life, I'm here to help.
             </p>
             <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
+            <a href="https://spb.hh.ru/applicant/resumes/view?resume=35dd7b21ff0b2711f20039ed1f633154494969" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container"> 
@@ -175,14 +170,9 @@
     <div class="row">
       <h2>Get in Touch</h2>
       <div class="contact__info">
-        <p>
-          Are you looking for a fast-performing and user-friendly website to
-          represent your product or business? or looking for any kind of
-          consultation? or want to ask questions? or have some advice for me
-          or just want to say "Hi 👋" in any case feel free to Let me know. I
-          will do my best to respond back. 😊 The quickest way to reach out to
-          me is via an email.
-        </p>
+          <p>
+              For inquiries or further information, please feel free to reach out to me using the following contact details:
+          </p>
         <!-- Replace the email with yours -->
         <a href="mailto:you@example.com" class="btn">usualnik@gmail.com</a>
       </div>
@@ -194,39 +184,14 @@
   <footer role="contentinfo" class="footer">
     <div class="row">
       <!-- Update the links to point to your accounts -->
-      <ul class="footer__social-links">
+      <ul class="footer__social-links">        
         <li class="footer__social-link-item">
-          <a href="https://twitter.com/nisarhassan12/" title="Link to Twitter Profile">
-            <img src="./images/twitter.svg" class="footer__social-image" alt="Twitter">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href="https://github.com/nisarhassan12/" title="Link to Github Profile">
-            <img src="./images/github.svg" class="footer__social-image" alt="Github">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href="https://codepen.io/nisar_hassan" title="Link to Codepen Profile">
-            <img src="./images/codepen.svg" class="footer__social-image" alt="Codepen">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href=https://www.linkedin.com/in/nisar-hassan-naqvi-413466199/">
-            <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
+          <a href="https://github.com/usualnik/Portfolio.git" title="Link to Github Profile">
+            <img src="./images/github.svg" class="footer__social-image" alt="Github" >            
+            <p>Template designed by nisar.dev</p>
           </a>
         </li>
       </ul>
-
-      <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
-      <p>
-        &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
-      </p>
-      <div class="footer__github-buttons">
-        <iframe
-          src="https://ghbtns.com/github-btn.html?user=nisarhassan12&repo=portfolio-template&type=watch&count=true"
-          frameborder="0" scrolling="0" width="170" height="20" title="Watch Portfolio Template on GitHub">
-        </iframe>
-      </div>
     </div>
   </footer>
 
