--- a/index.html
+++ b/index.html
@@ -61,31 +61,61 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>GitHub Portfolio</h3>
+              <h3>Cat samurai</h3>
               <p>
-                  UNITY Projects
+                  Tower defense
               </p>
               <ul class="work__list">
                   <li>Unity</li>
-                  <li>UI Tollkit</li>
-                  <li>Splines</li>
-                  <li>Dotween</li>
+                  <li>Addressables</li>
+                  <li>Scriptable objects</li>
+                  <li>Event based logic</li>
                   <li>And many more features</li>
 
               </ul>
 
               <div class="work__links">          
-                  <a href="https://github.com/usualnik/Portfolio.git" class="link__text">
+                  <a href="https://github.com/usualnik/CatSamurai.git" class="link__text">
                       GitHub <span>&rarr;</span>
+                  </a>                
+              </div>
+
+              <div class="work__links">          
+                <a href="https://yandex.ru/games/app/427803?lang=ru" class="link__text">
+                    Yadndex Games <span>&rarr;</span>
+                </a>                
+            </div>
+            </div>
+            <div class="work__image-box">
+              <img src="./images/CatsScreenshot.png" class="work__image" alt="Project 1">
+              
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>More food!!!</h3>
+              <p>
+                  Arcade
+              </p>
+              <ul class="work__list">
+                  <li>Pc|Mobile input</li>
+                  <li>Custom Particle systems</li>
+                  <li>Dotween</li>
+                  <li>Spline</li>
+                  <li>Custom Yandex sdk code</li>
+              </ul>
+
+              <div class="work__links">
+                  <a href="https://yandex.ru/games/app/438671?draft=true&lang=ru" class="link__text">
+                      Yandex Games <span>&rarr;</span>
                   </a>                
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/Portfolio.gif" class="work__image" alt="Project 1" width="600" height="340">
-
-              
+              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
             </div>
-          </div>
+          </div>        
 
           <div class="work__box">
             <div class="work__text">
@@ -109,31 +139,6 @@
             </div>
             <div class="work__image-box">
               <img src="./images/project-1.png" class="work__image" alt="Project 1" />
-            </div>
-          </div>
-
-          <div class="work__box">
-            <div class="work__text">
-              <h3>Thorns: Adlia</h3>
-              <p>
-                  Visual novel.
-              </p>
-              <ul class="work__list">
-                  <li>Original Sound Track</li>
-                  <li>Animated arts</li>
-                  <li>Improved SFX</li>
-                  <li>Improved storyline</li>
-                  <li>STEAM UPCOMING: Q4 2024</li>
-              </ul>
-
-              <div class="work__links">
-                  <a href="https://store.steampowered.com/app/2919590/Thorns_Adlia/" class="link__text">
-                      STEAM <span>&rarr;</span>
-                  </a>                
-              </div>
-            </div>
-            <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
             </div>
           </div>          
         </div>
