--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   Tower defense
               </p>
               <ul class="work__list">
-                  <li>Unity</li>
+                  <li>Unity 6</li>
                   <li>Addressables</li>
                   <li>Scriptable objects</li>
                   <li>Event based logic</li>
