--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             Hello, I'm a Unity 3D developer with a passion for creating immersive and engaging interactive experiences. If you're looking for a versatile professional who can bring your game or project to life, I'm here to help.
             </p>
             <!-- Provide a link to your resume -->
-            <a href="https://spb.hh.ru/applicant/resumes/view?resume=35dd7b21ff0b2711f20039ed1f633154494969" class="btn">My Resume</a>
+            <a href="https://yaroslavl.hh.ru/resume/eba28ec0ff0edaeda50039ed1f7146546a6a42" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container"> 
